# sempr

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE_ODB  README.md  manifest.xml  notes.md
.circleci/: config.yml
cmake/: FindCereal.cmake  FindGEOS.cmake  FindGeographicLib.cmake  PCH.cmake  UseODB.cmake
doc/: doxy.gen
include/: CapabilityInterface.hpp  Component.hpp  Core.hpp  ECAccessors.hpp  ECWME.hpp  ECWMEToJSONConverter.hpp  Entity.hpp  IDGenerator.hpp  RDF.hpp  SeparateFileStorage.hpp  SimpleIncrementalIDGenerator.hpp  Storage.hpp  TupleComponentAccessor.hpp  TupleEntityAccessor.hpp  TupleGeoToJSONConverter.hpp  TupleWMEToJSONConverter.hpp  Utility.hpp  sempr.hpp
include/component/: AffineTransform.hpp  GeosGeometry.hpp  TextComponent.hpp  TripleContainer.hpp  TripleDocument.hpp  TriplePropertyMap.hpp  TripleVector.hpp
include/nodes/: AffineTransformBuilders.hpp  AffineTransformNodes.hpp  ComponentQuery.hpp  ComponentQueryBuilder.hpp  ComponentQueryNode.hpp  ConstructRulesBuilder.hpp  ConstructRulesNode.hpp  CreateEntityBuilder.hpp  CreateEntityNode.hpp  DateDayBuilder.hpp  DateDayNode.hpp  DateDiffBuilder.hpp  DateDiffNode.hpp  DateMonthBuilder.hpp  DateMonthNode.hpp  DatePlusBuilder.hpp  DatePlusNode.hpp  DateYearBuilder.hpp  DateYearNode.hpp  ECNode.hpp  ECNodeBuilder.hpp  ExtractTriples.hpp  ExtractTriplesBuilder.hpp  FileMonitorNode.hpp  FileMonitorNodeBuilder.hpp  GeoAreaBuilder.hpp  GeoAreaNode.hpp  GeoBufferBuilder.hpp  GeoBufferNode.hpp  GeoConversionBuilders.hpp  GeoConversionNodes.hpp  GeoDifferenceBuilder.hpp  GeoDifferenceNode.hpp  GeoDistanceBuilder.hpp  GeoDistanceNode.hpp  GeoFromWKTBuilder.hpp  GeoFromWKTNode.hpp  GeoIntersectionBuilder.hpp  GeoIntersectionNode.hpp  (+19 more)
src/: CMakeLists.txt  Component.cpp  Core.cpp  ECAccessors.cpp  ECWMEToJSONConverter.cpp  Entity.cpp  RDF.cpp  SeparateFileStorage.cpp  SimpleIncrementalIDGenerator.cpp  TupleGeoToJSONConverter.cpp  TupleWMEToJSONConverter.cpp  sempr-core.pc.in
src/component/: AffineTransform.cpp  GeosGeometry.cpp  TextComponent.cpp  TripleContainer.cpp  TripleDocument.cpp  TriplePropertyMap.cpp  TripleVector.cpp
src/core/: Core.cpp  EntityAccessor.cpp  EntityEvent.cpp  EntityWME.cpp  Event.cpp  EventBroker.cpp  IncrementalIDGeneration.cpp  Observable.cpp  Observer.cpp  RDF.cpp  SimpleIncrementalIDGenerator.cpp  UUIDGeneration.cpp
src/entity/: CoffeeMug.cpp  Component.cpp  Entity.cpp  GeometricObject.cpp  Person.cpp  PointCloud.cpp  PrefixAssignedIDs.cpp  RDFDocument.cpp  RDFEntity.cpp  RDFPropertyMap.cpp  RDFValue.cpp  RDFVector.cpp  RuleSet.cpp  SemanticEntity.cpp
src/entity/agro/: AgroEntity.cpp
src/entity/argi/: AgriEntity.cpp  Field.cpp  Path.cpp  Road.cpp  Trees.cpp  Water.cpp
src/entity/example/: CoffeeMug.cpp  Person.cpp  PropertyTestEntity.cpp  SpatialThing.cpp
src/entity/spatial/: Collection.cpp  Curve.cpp  CurvePolygon.cpp  GeocentricCS.cpp  GeodeticCS.cpp  GeographicCS.cpp  Geometry.cpp  GeometryCollection.cpp  GlobalCS.cpp  LineString.cpp  Lineal.cpp  LinearRing.cpp  LocalCS.cpp  LocalTransformation.cpp  LocalTransformationFilter.cpp  MultiPoint.cpp  Point.cpp  PointCloud.cpp  PointCloud_2.cpp  Polygon.cpp  ProjectionCS.cpp  ProjectionFilter.cpp  SimpleCurve.cpp  SpatialObject.cpp  SpatialReference.cpp  Surface.cpp
src/entity/spatial/filter/: GeocentricFilter.cpp  GeometryFilter.cpp  LocalTransformationFilter.cpp  ProjectionFilter.cpp
src/entity/spatial/reference/: EarthCenteredCS.cpp  GeocentricCS.cpp  GeodeticCS.cpp  GlobalCS.cpp  LocalCS.cpp  LocalTangentPlaneCS.cpp  MilitaryGridReferenceSystem.cpp  ProjectionCS.cpp  SpatialReference.cpp  UniversalPolarStereographic.cpp  UniversalPolarStereographicCS.cpp  UniversalTransverseMercatorCS.cpp
src/nodes/: AffineTransformBuilders.cpp  AffineTransformNodes.cpp  ComponentQuery.cpp  ComponentQueryBuilder.cpp  ConstructRulesBuilder.cpp  ConstructRulesNode.cpp  CreateEntityBuilder.cpp  CreateEntityNode.cpp  DateDayBuilder.cpp  DateDayNode.cpp  DateDiffBuilder.cpp  DateDiffNode.cpp  DateMonthBuilder.cpp  DateMonthNode.cpp  DatePlusBuilder.cpp  DatePlusNode.cpp  DateYearBuilder.cpp  DateYearNode.cpp  ECNode.cpp  ExtractTriples.cpp  ExtractTriplesBuilder.cpp  FileMonitorNode.cpp  FileMonitorNodeBuilder.cpp  GeoAreaBuilder.cpp  GeoAreaNode.cpp  GeoBufferBuilder.cpp  GeoBufferNode.cpp  GeoConversionBuilders.cpp  GeoConversionNodes.cpp  GeoDifferenceBuilder.cpp  GeoDifferenceNode.cpp  GeoDistanceBuilder.cpp  GeoDistanceNode.cpp  GeoFromWKTBuilder.cpp  GeoFromWKTNode.cpp  GeoIntersectionBuilder.cpp  GeoIntersectionNode.cpp  GeoIntersectsBuilder.cpp  GeoIntersectsNode.cpp  GeoToWKTBuilder.cpp  (+15 more)
src/plugins/: AffineTFPlugin.cpp  DatePlugin.cpp  GeosPlugin.cpp  RDFPlugin.cpp  UtilPlugin.cpp
src/processing/: ActiveObjectStore.cpp  CalculatePointsModule.cpp  DBUpdateModule.cpp  DebugModule.cpp  InfluenceModule.cpp  Module.cpp  ModuleBase.cpp  PointCloudModule.cpp  SopranoModule.cpp  SpatialConclusion.cpp  SpatialIndex.cpp
src/query/: CalculatePointsQuery.cpp  InfluenceQuery.cpp  PolygonQuery.cpp  SPARQLQuery.cpp  SpatialIndexQuery.cpp
src/storage/: DBObject.cpp  ODBStorage.cpp
src/test/: CMakeLists.txt  main.cpp
src/util/: FileWatcher.cpp  GenericCoordinateFilter.cpp
test/: AffineTransformTest.cpp  CMakeLists.txt  ComponentQueryTest.cpp  ComponentSerializationTest.cpp  ConstructRulesEffectTest.cpp  CoreTest.cpp  CreateEntityTest.cpp  ECNodeTest.cpp  EntityTest.cpp  Entity_tests.cpp  ExplanationJSONTest.cpp  FileMonitorNodeTest.cpp  FileStorageTest.cpp  GeometryTest.cpp  InferECTest.cpp  MutableWME_tests.cpp  PointCloud_tests.cpp  RDFPropertymap_tests.cpp  SEMPR_tests.cpp  SemanticEntity_tests.cpp  SopranoTest.cpp  TripleContainerTest.cpp  TripleDocumentTest.cpp  TriplePropertyMapTest.cpp  WMEToJSONConverterTest.cpp  geometries_tests.cpp  main.cpp  queries_tests.cpp  spatial_conclusion_tests.cpp  spatial_index_tests.cpp  spatial_restriction_tests.cpp  storage_tests.cpp  test.cpp  test_utils.hpp
test/old/: SemanticEntity_tests.cpp  geometries_tests.cpp  main.cpp  storage_tests.cpp
(+160 files in other folders)
